<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    tools:context="${packageName}.${activityClass}" >

    <include
        android:id="@+id/page_header_layout"
        layout="@layout/activity_navigator" />

    <ListView
        android:id="@+id/manifest"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/page_header_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:divider="@null" />

    <LinearLayout
        android:id="@+id/contact_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/manifest"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/backgroud_white"
        android:orientation="vertical"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip" >

        <EditText
            android:id="@+id/address"
            style="@style/edit"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_map_pin"
            android:drawablePadding="10dip"
            android:hint="@string/dry_cleaning_reserve_address_hint"
            android:inputType="text"
            android:minHeight="40dp"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/telephone"
            style="@style/edit"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_contact"
            android:drawablePadding="10dip"
            android:hint="@string/dry_cleaning_reserve_telephone_hint"
            android:inputType="phone"
            android:minHeight="40dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/disclaimer_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_box"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <TextView
            style="@style/title"
            android:layout_gravity="center_horizontal"
            android:text="@string/dry_cleaning_reserve_disclaimer_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/disclaimer"
                style="@style/title.small"
                android:gravity="left"
                android:text="@string/dry_cleaning_reserve_disclaimer" />
        </ScrollView>

        <CheckBox
            android:id="@+id/disclaimer_accept"
            style="@style/title.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:button="@drawable/btn_check_agree"
            android:text="@string/dry_cleaning_reserve_disclaimer_accept" />
    </LinearLayout>

    <TextView
        android:id="@+id/reserve_confirmed"
        style="@style/button"
        android:layout_below="@id/disclaimer_box"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/dry_cleaning_reserve_send_reservation" />

</RelativeLayout>