<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/hsa_top_navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/hsa_back_navigation_imagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:contentDescription="@string/back_navigation_imagebutton_desc"
            android:src="@drawable/back_nav" />

        <TextView
            android:id="@+id/hsa_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/hsa_tv_title_text"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <!-- 功能列表区域 -->

    <TextView
        android:id="@+id/hsa_tip_msg_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/hsa_tip_msg_textview_defalut_text"
        android:textColor="@color/white"
        android:textSize="20sp" >
    </TextView>

    <!-- 服务人员 -->

    <TableLayout
        android:id="@+id/hsa_waiter_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TableRow android:id="@+id/hsa_waiter_item"
            android:gravity="center_horizontal"
            android:paddingBottom="30dip" >

            <Button
                android:text="一" >
            </Button>

            <Button android:text="两"  >
            </Button>

            <Button android:text="三" >
            </Button>
        </TableRow>

        <TableRow
            android:gravity="center" android:paddingBottom="30dip" >

            <Button android:text="一" >
            </Button>

            <Button android:text="两" >
            </Button>

            <Button android:text="三" >
            </Button>
        </TableRow>
    </TableLayout>

    <!-- 电话号码 -->

    <TextView
        android:id="@+id/hsa_phone_textview"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/cleaning_btn_n"
        android:gravity="center_vertical|left"
        android:hint="@string/hsa_phone_textview_hint"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" >
    </TextView>
    <!-- 确认预约按钮 -->

    <Button
        android:id="@+id/hsa_confirm_appointment_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/cleaning_btn_n"
        android:singleLine="true"
        android:text="@string/hsa_send_appointment_btn_text"
        android:textColor="@color/white" >
    </Button>
    <!-- 联系客服 -->

</LinearLayout>