<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/cleaning_top_navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="56dip"
        android:background="#66222222"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/cleaning_back_navigation_imagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:contentDescription="@string/back_navigation_imagebutton_desc"
            android:src="@drawable/back_nav" />

        <TextView
            android:id="@+id/cleaning_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/cleaning_tv_title_text"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <!-- 功能列表区域 -->


    <!-- 星级服务 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/start_item_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 观看流程按钮 -->

            <Button
                android:id="@+id/cleaning_view_flow_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/cleaning_btn_n"
                android:singleLine="true"
                android:text="@string/cleaning_view_flow_btn_text"
                android:textColor="@color/white"
                android:textSize="18sp" >
            </Button>
            <!-- 我要定制 -->

            <Button
                android:id="@+id/cleaning_custom_flow_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/cleaning_btn_n"
                android:singleLine="true"
                android:text="@string/cleaning_custom_flow_btn_text"
                android:textColor="@color/white"
                android:textSize="18sp" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>