<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/he_top_navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/he_back_navigation_imagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:contentDescription="@string/back_navigation_imagebutton_desc"
            android:src="@drawable/back_nav" />

        <TextView
            android:id="@+id/he_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/he_tv_title_text"
            android:textColor="@color/white"
            android:textSize="22sp" />
        
        <ImageButton
            android:id="@+id/he_next_flow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:contentDescription="@string/he_next_flow_button_desc"
            android:src="@drawable/next_flow" />
    </RelativeLayout>

    <!-- 功能列表区域 -->

    <ListView
        android:id="@+id/hourly_employee_xlist_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@null"
        android:dividerHeight="1dp" >
    </ListView>



</LinearLayout>